# django-nets-core

./: .gitignore  =0.12.0  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  SECURITY.md  conf.py  db.sqlite3  django-nets-core.code-workspace  pyproject.toml  requirements.txt  setup.cfg  sync_and_build.sh  workon
django_nets_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nets_core/: admin.py  apps.py  asgi.py  auth_urls.py  celery.py  decorators.py  default_settings.py  django-nets-core.code-workspace  firebase_messages.py  google_auth.py  handlers.py  listeners.py  mail.py  manage.py  models.py  params.py  responses.py  security.py  serializers.py  settings.py  settings_nets.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
nets_core/config-examples/: celery.py
nets_core/management/commands/: nets-settings.py  test_push_notification.py
nets_core/middleware/: auth_token.py
nets_core/migrations/: 0001_initial.py  0002_alter_verificationcode_token.py  0003_userdevice.py  0004_remove_userdevice_device_id_userdevice_uuid.py  0005_userdevice_uuid.py  0006_verificationcode_device.py  0007_alter_verificationcode_device.py  0008_verificationcode_ip_userfirebasenotification.py  0009_userdevice_ip.py  0010_permission_role_userrole_and_more.py  0011_role_enabled.py  0012_permission_created_permission_updated_role_created_and_more.py  0013_customemail_updated_fields_and_more.py  0014_rolepermission_remove_permission_permission_index_and_more.py  pre_migrate_role_permissions.py
nets_core/procedures/: nets_core_functions.py
nets_core/procedures/functions/: nets_core_postgre_model_to_json.sql  nets_core_postgresql_model_to_json.sql
nets_core/templates/nets_core/: base.html  delete_account.html
nets_core/templates/nets_core/email/: base_email.html  new_login.html  verification_code.html
