[metadata]
name = django-nets-core
version = 0.1.8
description = A lazy API rest request handler.
long_description = file: README.rst
url = https://github.com/esbozos/django-nets-core
author = Norman Torres
author_email = norman.nets@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1 
    pytz >= 2022.7.1
    python-dateutil >= 2.8.2
    shortuuid >= 1.0.11
    django-oauth-toolkit >= 2.2.0