[metadata]
name = django-nets-core
version = 0.1.60
description = A lazy API rest request handler.
long_description = file: README.rst
url = https://github.com/esbozos/django-nets-core
author = Norman Torres
author_email = norman.nets@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Framework :: Django :: 5.0.4 # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 5.0.4
    pytz >= 2024.1
    python-dateutil >= 2.9.0.post0
    shortuuid >= 1.0.13
    django-oauth-toolkit >= 2.3.0
    firebase-admin >=6.5.0