[metadata]
name = django-nets-core
version = 0.1.124
description = A lazy API rest request handler.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/esbozos/django-nets-core
author = Norman Torres
author_email = norman.nets@gmail.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 5.0.4
    pytz >= 2024.1
    python-dateutil >= 2.9.0.post0
    shortuuid >= 1.0.13
    django-oauth-toolkit >= 2.3.0
    firebase-admin >=6.5.0
    celery >=5.4.0
    django_celery_beat >= 2.6.0
    django-cors-headers >= 4.3.1
    pymemcache >= 4.0.0
    python-memcached >= 1.62
    django-memcached >= 0.1.2
    channels >= 4.1.0
    channels-redis >= 4.2.0
    daphne >= 4.1.2